--- a/notebooks/rf_otto转移.ipynb
+++ b/notebooks/rf_otto转移.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-06-17T10:07:31.433456Z",
@@ -47,55 +47,55 @@
     }
    ],
    "source": [
-    "# 1. 加载训练数据\n",
+    "# 1. Load training data\n",
     "data = pd.read_csv('train_otto.csv')\n",
-    "x = data.drop(['id', 'target'], axis=1)  # 特征\n",
-    "y = data['target']                      # 原始标签\n",
+    "x = data.drop(['id', 'target'], axis=1)  # features\n",
+    "y = data['target']                      # original labels\n",
     "\n",
-    "# 2. 平衡数据集（处理类别不平衡）\n",
+    "# 2. Balance the dataset (handle class imbalance)\n",
     "rus = RandomUnderSampler(random_state=0)\n",
     "x, y = rus.fit_resample(x, y)\n",
     "\n",
-    "# 3. 将标签编码为数字（如\"Class_1\" -> 0）\n",
+    "# 3. Encode labels as integers (e.g., \"Class_1\" -> 0)\n",
     "le = LabelEncoder()\n",
-    "y = le.fit_transform(y)  # y现在是数值型标签\n",
+    "y = le.fit_transform(y)  # y is now numeric labels\n",
     "\n",
     "x_train,x_test,y_train,y_test=train_test_split(x,y,test_size=0.2,random_state=0)\n",
-    "# 4. 训练随机森林模型\n",
+    "# 4. Train Random Forest model\n",
     "rf = RandomForestClassifier(oob_score=True)\n",
     "rf.fit(x_train, y_train)\n",
     "\n",
-    "# 5. 加载测试集（无标签数据）\n",
-    " # 测试集特征\n",
+    "# 5. Load test set (unlabeled data)\n",
+    " # test set features\n",
     "\n",
     "# 6. 模型预测\n",
     "y_pre = rf.predict(x_test)  # 预测结果\n",
     "\n",
-    "# # 7. 加载真实标签（从提交样例文件中获取）\n",
+    "# # 7. (Alternative) Load true labels (from submission example)\n",
     "# data3 = pd.read_csv('sampleSubmission_otto.csv')\n",
-    "# # 将one-hot格式转为数值标签（假设列名是Class_1, Class_2...）\n",
+    "# # Convert one-hot format to numeric labels (assume columns named Class_1, Class_2...)\n",
     "# y_test = np.argmax(data3.drop('id', axis=1).values, axis=1)\n",
     "\n",
-    "# 8. 计算准确率（正确用法：传入测试特征和真实标签）\n",
+    "# 8. Compute accuracy (correct usage: pass test features and true labels)\n",
     "score = rf.score(x_test, y_test)\n",
     "print(\"模型准确率:\", score)\n",
     "print(rf.oob_score_)\n",
     "print(y_pre.shape)\n",
-    "#模型评估\n",
+    "# Model evaluation\n",
     "one_hot=OneHotEncoder(sparse_output=False)\n",
     "y_test1=one_hot.fit_transform(y_test.reshape(-1,1))\n",
     "y_pre1=one_hot.fit_transform(y_pre.reshape(-1,1))\n",
     "log_loss1=log_loss(y_test1,y_pre1,normalize=True)\n",
     "print(log_loss1)\n",
-    "#改变预测值的输出格式 减低logloss值\n",
-    "y_proba=rf.predict_proba(x_test)#矩阵形式\n",
+    "# Change prediction output format to reduce logloss\n",
+    "y_proba=rf.predict_proba(x_test) # matrix form\n",
     "log_loss2=log_loss(y_test1,y_proba)\n",
     "print(log_loss2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-06-17T10:07:43.528989200Z",
@@ -210,12 +210,12 @@
     }
    ],
    "source": [
-    "#模型调优\n",
-    "#确定最优 n_estimators  先确定取值范围\n",
+    "# Model tuning\n",
+    "# Determine optimal n_estimators: first set the search range\n",
     "turned_parameters=range(10,200,10)\n",
-    "#创建添加accuracy的一个numpy\n",
+    "# create numpy array to store accuracy\n",
     "accuracy_t=np.zeros(len(turned_parameters))\n",
-    "#添加error的numpy\n",
+    "# create numpy array to store error\n",
     "error_t=np.zeros(len(turned_parameters))\n",
     "for j,one_parameter in enumerate(turned_parameters):\n",
     "    rf2=RandomForestClassifier(n_estimators=one_parameter,\n",
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-06-17T10:07:43.833087100Z",
@@ -257,7 +257,7 @@
     }
    ],
    "source": [
-    "#优化结果可视化\n",
+    "# Visualize tuning results\n",
     "fig,axes=plt.subplots(nrows=1,ncols=2,figsize=(20,4),dpi=100)\n",
     "axes[0].plot(turned_parameters,error_t)\n",
     "axes[1].plot(turned_parameters,accuracy_t)\n",
@@ -276,12 +276,12 @@
     "collapsed": false
    },
    "source": [
-    "确定最优n_estamator=160"
+    "Determined optimal n_estimators = 160"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-06-17T10:07:51.205326200Z",
@@ -312,12 +312,12 @@
     }
    ],
    "source": [
-    "#模型调优\n",
-    "#确定最优 max_features  先确定取值范围\n",
+    "# Model tuning\n",
+    "# Determine optimal max_features: first set the search range\n",
     "turned_parameters=range(5,40,5)\n",
-    "#创建添加accuracy的一个numpy\n",
+    "# create numpy array to store accuracy\n",
     "accuracy_t=np.zeros(len(turned_parameters))\n",
-    "#添加error的numpy\n",
+    "# create numpy array to store error\n",
     "error_t=np.zeros(len(turned_parameters))\n",
     "for j,one_parameter in enumerate(turned_parameters):\n",
     "    rf2=RandomForestClassifier(n_estimators=160,\n",
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-06-17T10:07:51.469311300Z",
@@ -359,7 +359,7 @@
     }
    ],
    "source": [
-    "#优化结果可视化\n",
+    "# Visualize tuning results\n",
     "fig,axes=plt.subplots(nrows=1,ncols=2,figsize=(20,4),dpi=100)\n",
     "axes[0].plot(turned_parameters,error_t)\n",
     "axes[1].plot(turned_parameters,accuracy_t)\n",
@@ -378,12 +378,12 @@
     "collapsed": false
    },
    "source": [
-    "#max_features=15时效果不错"
+    "# max_features = 15 performed well"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-06-17T10:08:02.186095600Z",
@@ -418,12 +418,12 @@
     }
    ],
    "source": [
-    "#模型调优\n",
-    "#确定最优 max_depth  先确定取值范围\n",
+    "# Model tuning\n",
+    "# Determine optimal max_depth: first set the search range\n",
     "turned_parameters=range(10,100,10)\n",
-    "#创建添加accuracy的一个numpy\n",
+    "# create numpy array to store accuracy\n",
     "accuracy_t=np.zeros(len(turned_parameters))\n",
-    "#添加error的numpy\n",
+    "# create numpy array to store error\n",
     "error_t=np.zeros(len(turned_parameters))\n",
     "for j,one_parameter in enumerate(turned_parameters):\n",
     "    rf2=RandomForestClassifier(n_estimators=160,\n",
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-06-17T10:08:02.435251Z",
@@ -465,7 +465,7 @@
     }
    ],
    "source": [
-    "#优化结果可视化\n",
+    "# Visualize tuning results\n",
     "fig,axes=plt.subplots(nrows=1,ncols=2,figsize=(20,4),dpi=100)\n",
     "axes[0].plot(turned_parameters,error_t)\n",
     "axes[1].plot(turned_parameters,accuracy_t)\n",
@@ -484,12 +484,12 @@
     "collapsed": false
    },
    "source": [
-    "max_depth=30时效果不错"
+    "max_depth = 30 performed well"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-06-17T10:08:09.548941100Z",
@@ -511,12 +511,12 @@
     }
    ],
    "source": [
-    "#模型调优\n",
-    "#确定最优 min_samples_leaf  先确定取值范围\n",
+    "# Model tuning\n",
+    "# Determine optimal min_samples_leaf: first set the search range\n",
     "turned_parameters=range(1,10,2)\n",
-    "#创建添加accuracy的一个numpy\n",
+    "# create numpy array to store accuracy\n",
     "accuracy_t=np.zeros(len(turned_parameters))\n",
-    "#添加error的numpy\n",
+    "# create numpy array to store error\n",
     "error_t=np.zeros(len(turned_parameters))\n",
     "for j,one_parameter in enumerate(turned_parameters):\n",
     "    rf2=RandomForestClassifier(n_estimators=160,\n",
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-06-17T10:08:09.844326200Z",
@@ -558,7 +558,7 @@
     }
    ],
    "source": [
-    "#优化结果可视化\n",
+    "# Visualize tuning results\n",
     "fig,axes=plt.subplots(nrows=1,ncols=2,figsize=(20,4),dpi=100)\n",
     "axes[0].plot(turned_parameters,error_t)\n",
     "axes[1].plot(turned_parameters,accuracy_t)\n",
@@ -577,7 +577,7 @@
     "collapsed": false
    },
    "source": [
-    "min_samples_leaf =1时效果不错"
+    "min_samples_leaf = 1 performed well"
    ]
   },
   {
@@ -586,7 +586,7 @@
     "collapsed": false
    },
    "source": [
-    "#确定最优模型\n",
+    "# Final chosen model parameters\n",
     "                                n_estimators=160,\n",
     "                               max_depth=30,\n",
     "                               max_features=15,\n",
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-06-17T10:08:15.438510700Z",
@@ -1160,7 +1160,7 @@
     }
    ],
    "source": [
-    "#生成提交数据\n",
+    "# Generate submission data\n",
     "test_data=pd.read_csv('test_otto.csv')\n",
     "test_data_drop_id=test_data.drop(['id'],axis=1)\n",
     "test_data_drop_id.shape"
